--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,22 @@
 <ion-header>
   <ion-navbar>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
     <ion-title>
-      Ionic Blank
+      Home
     </ion-title>
   </ion-navbar>
 </ion-header>
-
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+<ion-content padding id="page1">
+  <ion-list id="home-list2">
+    <ion-item color="none" id="home-list-item4">
+      <ion-thumbnail item-left>
+        <img />
+      </ion-thumbnail>
+      <h2>
+       Tajuk Aduan
+      </h2>
+    </ion-item>
+  </ion-list>
 </ion-content>
